--- a/index.html
+++ b/index.html
@@ -8,60 +8,30 @@
     <title>A & B | Wedding site</title>
 
     <!-- bootstrap 5.3 -->
-    <link rel="stylesheet" href="./bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/header.css">
 
 </head>
 
 <body>
-    <!-- header nav -->
-    <nav></nav>
-
     <!-- main slide -->
     <div class="slider">
         <!-- slides -->
-        <div class="slider__slides">
-            <div class="slide s--active">
-                <div class="slide__inner">
-                    <div class="slide__content">
-                        <h2 class="slide__heading">Clip-Path Revealing Slider</h2>
-                        <p class="slide__text">Greetings, Traveler!</p>
-                    </div>
+        <div class="slider">
+            <div class="slider--content">
+                <button class="slider__btn-left">
+                    <i class="fas fa-angle-left"></i>
+                </button>
+                <div class="slider--feature">
+                    <h1 class="slider--title">Kiến Văn & Việt Hoài</h1>
+                    <p class="slider--text"></p>
                 </div>
-            </div>
-            <div class="slide">
-                <div class="slide__inner">
-                    <div class="slide__content">
-                        <h2 class="slide__heading">Simple Animation</h2>
-                        <p class="slide__text">Clip-path magic!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="slide__inner">
-                    <div class="slide__content">
-                        <h2 class="slide__heading">Very Stylish Effect!</h2>
-                        <p class="slide__text">It looks cool, isn't it?</p>
-                    </div>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="slide__inner">
-                    <div class="slide__content">
-                        <h2 class="slide__heading">Limited browser support</h2>
-                        <p class="slide__text">Forget about IE/Edge and FF</p>
-                    </div>
-                </div>
-            </div>
-            <div class="slide s--prev">
-                <div class="slide__inner">
-                    <div class="slide__content">
-                        <h2 class="slide__heading">Check my other stuff!</h2>
-                        <p class="slide__text"><a href="https://codepen.io/suez/pens/public/" target="_blank">Other
-                                demos</a> and <a href="https://twitter.com/NikolayTalanov" target="_blank">Twitter</a>
-                        </p>
-                    </div>
-                </div>
+                <span class="heart"></span>
+                <button class="slider__btn-right">
+                    <i class="fas fa-angle-right"></i>
+                </button>
             </div>
         </div>
         <!-- slides end -->
@@ -74,6 +44,134 @@
             <div class="slider__control-line"></div>
         </div>
     </div>
+    <!-- end main slide -->
+
+    <!-- header -->
+    <section class="section1">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <div class="container-fluid nav-img">
+                    <a class="navbar-brand" href="#">V <i class="fa-solid fa-guitar"></i> H</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse nav-menu " id="navbarNav">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CẶP ĐÔI</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CHUYỆN TÌNH YÊU</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">SỰ KIỆN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PHÙ DÂU & PHÙ RỂ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ALBUM CƯỚI</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">LỜI CHÚC</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">MỪNG CƯỚI</a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
+
+    </section>
+    <!-- end header -->
+    <!-- couple-img -->
+    <section class="section2">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="couple-img">
+                        <img src="./image/111.jpeg" alt="">
+                        <h2 class="h2-name">Hoàng Kiến Văn</h2>
+                        <h4 class="text-center">THÔNG TIN CHÚ RỂ</h4>
+                        <p class="text-center">Là bác sĩ nha khoa hiện đang công tác tại một phòng khám nha khoa ở Quận
+                            1 thành phồ Hồ Chí
+                            Minh.
+                            Là một người hiền lành và ít nói. Luôn coi trọng tình cảm và yêu thương gia đình. Với anh:
+                            “Gia
+                            đình là điểm tựa vững chắc nhất và là bến đỗ bình yên không đâu sánh bằng đối với mỗi con
+                            người.
+                            Đó luôn là nơi tràn ngập tình yêu thương để ta trở về.”</p>
+                    </div>
+                    <div class="row icon-nav">
+                        <ul>
+                            <li><a href=""><i class="fa-brands fa-facebook i-icon"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-square-twitter i-icon"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-square-instagram i-icon"></i></a></li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="couple-img">
+                        <img src="./image/222.jpeg" alt="">
+                        <h2 class="h2-name">Ngô Việt Hoài</h2>
+                        <h4 class="text-center">THÔNG TIN CÔ DÂU</h4>
+                        <p class="text-center">Cô gái đến từ xứ Huế mộng mơ, hiện đang sinh sống và làm việc tại Sài
+                            Gòn. Sau khi tốt nghiệp
+                            Học
+                            viện Báo chí và Tuyên truyền, quyết tâm theo đuổi đam mê làm phóng viên du lịch. Là một
+                            người
+                            hay cười nhưng lại sống nội tâm, thích đọc sách, trồng cây và yêu thiên nhiên. Ngoài ra còn
+                            rất
+                            thích vẽ vời, nuôi mèo và nuôi ước mơ có cho mình một vườn hồng khoe sắc.</p>
+                    </div>
+                    <div class="row icon-nav">
+                        <ul>
+                            <li><a href=""><i class="fa-brands fa-facebook i-icon"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-square-twitter i-icon"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-square-instagram i-icon"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- end couple-img -->
+
+    <!-- Love-img -->
+    <section>
+        <div class="container">
+            <div class="row nav-h2-love text-center ">
+                <h2>Chuyện Tình Yêu</h2>
+            </div>
+            <div class="row mt-5">
+                <div class="nav-love">
+                    <div class="love-1 text-center">
+                        <h3>Bạn có tin vào tình yêu online không?</h3>
+                        <h4>December 12 2015</h4>
+                        <div class="love-img-1">
+                            <img src="./image/333.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">Tôi đã từng không tin vào tình yêu online. Đã từng nghĩ làm sao có thể thích một
+                            người chưa
+                            từng gặp mặt? Vậy mà giờ đây tôi lại đang như vậy, bây giờ tôi đã hiểu: thế giới ảo tình yêu
+                            thật đấy!!! Ngày ấy vu vơ đăng một dòng status trên facebook than thở, vu vơ đùa giỡn nói
+                            chuyện với một người xa lạ chưa từng quen. Mà nào hay biết, 4 năm sau người ấy lại là chồng
+                            mình.</p>
+                    </div>
+                    <div class="before">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end love -->
 
 
 
@@ -81,7 +179,10 @@
     <!-- script main js -->
     <script src="./js/main.js"></script>
     <!-- script bootstrap -->
-    <script src="./bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/00e139dcd0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
