--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
     </section>
     <!-- end couple-img -->
 
+    <div class="couple__love"></div>
+
     <!-- Love-img -->
     <section>
         <div class="container">
