--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- bootstrap 5.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
 
@@ -182,10 +182,18 @@
         </div>
         <div class="clock-grids">
             <div id="clock">
-                <div class="box"><span id="day" class="text-theme">1</span><p>Ngày</p></div>
-                <div class="box"><span id="hour" class="text-theme">2</span><p>Giờ</p></div>
-                <div class="box"><span id="minute" class="text-theme">3</span><p>Phút</p></div>
-                <div class="box"><span id="second" class="text-theme">3</span><p>Giây</p></div>
+                <div class="box"><span id="day" class="text-theme">1</span>
+                    <p>Ngày</p>
+                </div>
+                <div class="box"><span id="hour" class="text-theme">2</span>
+                    <p>Giờ</p>
+                </div>
+                <div class="box"><span id="minute" class="text-theme">3</span>
+                    <p>Phút</p>
+                </div>
+                <div class="box"><span id="second" class="text-theme">3</span>
+                    <p>Giây</p>
+                </div>
             </div>
         </div>
     </section>
@@ -211,14 +219,99 @@
                             thật đấy!!! Ngày ấy vu vơ đăng một dòng status trên facebook than thở, vu vơ đùa giỡn nói
                             chuyện với một người xa lạ chưa từng quen. Mà nào hay biết, 4 năm sau người ấy lại là chồng
                             mình.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
                     </div>
-                    <div class="before">
+                    <div class="love-1 text-center mt-3">
+                        <h3>Lời tỏ tình dễ thương^^</h3>
+                        <h4>August 04 2016</h4>
+                        <div class="love-img-1">
+                            <img src="./image/444.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">Ngày ấy, tôi 21! Một mình giữa phố thị nấp tập. Mỗi chiều cuối tuần thường chạy
+                            xe vòng quanh qua những con phố, len lỏi trong từng dòng người tấp nập. Hay thậm chí là ghé
+                            vào một quán cà phê ven đường để ngồi đó và cảm nhận về cuộc sống của riêng mình. Đôi khi
+                            lạc lõng và hơi cô đơn. Nhưng rồi một ngày đẹp trời, người con trai ấy xuất hiện, nắm tay
+                            rồi thủ thỉ vào tai: “Hy vọng sau này anh được làm những điều ấy cùng em”.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
+                    </div>
+                    <div class="love-1 text-center mt-3">
+                        <h3>Phút giây cầu hôn</h3>
+                        <h4>May 10 2018</h4>
+                        <div class="love-img-1">
+                            <img src="./image/555.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">5 năm bên nhau không phải là quãng thời gian quá dài, nhưng đủ cho chúng ta nhận
+                            ra được rất nhiều điều. Yêu nhau, vun vén hạnh phúc và cùng nỗ lực vượt qua những khó khăn
+                            trong cuộc sống. Chúng ta từ 2 con người xa lạ mà bước vào cuộc đời nhau. Và giờ đây chúng
+                            ta tiếp tục cùng nhau sang trang mới. Giây phút anh ngỏ lời “Làm vợ anh nhé!”, em đã nguyện
+                            ý đời này, đi đâu cũng được, miễn là cùng anh.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
+                    </div>
+                    <div class="love-1 text-center mt-3">
+                        <h3>Ngày lễ đính hôn</h3>
+                        <h4>July 28 2018</h4>
+                        <div class="love-img-1">
+                            <img src="./image/666.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">“Tiếng trái tim đôi ta đập thật nhanh. Thì thầm lời yêu thương. Ngày tình về
+                            chung đôi...” Sau bao nhiêu chờ đợi, cuối cùng ngày vui của chúng ta cũng tới rồi. Cảm ơn vì
+                            mình đã luôn là một phần trong cuộc sống của nhau. Em và anh không chỉ là người yêu mà chúng
+                            ta còn là tri kỷ. Ngày hôm nay, em sẽ là cô dâu của anh và sau này sẽ là mẹ của các con anh.
+                        </p>
+
+                    </div>
+                    <div class="text-center">
+                        <img src="./image/777.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- end love -->
+
+    <!-- album img -->
+    <section>
+        <div class="container">
+            <div class="row image">
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 zoom-In">
+                    <figure>
+                        <img src="./image/6.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+                    <figure>
+                        <img src="./image/5.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+                </div>
+
+                <div class="col-lg-4 mb-4 mb-lg-0 zoom-In">
+                    <figure>
+                        <img src="./image/4.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+                    <figure>
+                        <img src="./image/6.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+                </div>
+
+                <div class="col-lg-4 mb-4 mb-lg-0 zoom-In">
+                    <figure>
+
+                        <img src="./image/7.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+
+                    <figure>
+                        <img src="./image/1.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                    </figure>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- end album img -->
 
     <!-- button audio -->
     <div class="btn__play-audio">
