--- a/header.html
+++ b/header.html
@@ -229,6 +229,112 @@
         </div>
     </section>
 
+
+
+    <section class="section-love">
+        <div class="container">
+            <div class="row nav-h2-love text-center ">
+                <h2>Chuyện Tình Yêu</h2>
+            </div>
+            <div class="row mt-5">
+                <div class="nav-love">
+                    <div class="love-1 text-center">
+                        <h3>Bạn có tin vào tình yêu online không?</h3>
+                        <h4>December 12 2015</h4>
+                        <div class="love-img-1">
+                            <img src="./image/333.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">Tôi đã từng không tin vào tình yêu online. Đã từng nghĩ làm sao có thể thích
+                            một
+                            người chưa
+                            từng gặp mặt? Vậy mà giờ đây tôi lại đang như vậy, bây giờ tôi đã hiểu: thế giới ảo tình
+                            yêu
+                            thật đấy!!! Ngày ấy vu vơ đăng một dòng status trên facebook than thở, vu vơ đùa giỡn
+                            nói
+                            chuyện với một người xa lạ chưa từng quen. Mà nào hay biết, 4 năm sau người ấy lại là
+                            chồng
+                            mình.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
+                    </div>
+                    <div class="hoa-befor">
+                            <div class="befo">
+                            </div>
+                    </div>
+                    <div class="love-1 text-center mt-3">
+                        <h3>Lời tỏ tình dễ thương^^</h3>
+                        <h4>August 04 2016</h4>
+                        <div class="love-img-1">
+                            <img src="./image/444.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">Ngày ấy, tôi 21! Một mình giữa phố thị nấp tập. Mỗi chiều cuối tuần thường
+                            chạy
+                            xe vòng quanh qua những con phố, len lỏi trong từng dòng người tấp nập. Hay thậm chí là
+                            ghé
+                            vào một quán cà phê ven đường để ngồi đó và cảm nhận về cuộc sống của riêng mình. Đôi
+                            khi
+                            lạc lõng và hơi cô đơn. Nhưng rồi một ngày đẹp trời, người con trai ấy xuất hiện, nắm
+                            tay
+                            rồi thủ thỉ vào tai: “Hy vọng sau này anh được làm những điều ấy cùng em”.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
+                    </div>
+                    <!-- <div class="hoa-befor-1">
+                        <div class="befo-1">
+                        </div>
+                    </div> -->
+                    <div class="love-1 text-center mt-3">
+                        <h3>Phút giây cầu hôn</h3>
+                        <h4>May 10 2018</h4>
+                        <div class="love-img-1">
+                            <img src="./image/555.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">5 năm bên nhau không phải là quãng thời gian quá dài, nhưng đủ cho chúng ta
+                            nhận
+                            ra được rất nhiều điều. Yêu nhau, vun vén hạnh phúc và cùng nỗ lực vượt qua những khó
+                            khăn
+                            trong cuộc sống. Chúng ta từ 2 con người xa lạ mà bước vào cuộc đời nhau. Và giờ đây
+                            chúng
+                            ta tiếp tục cùng nhau sang trang mới. Giây phút anh ngỏ lời “Làm vợ anh nhé!”, em đã
+                            nguyện
+                            ý đời này, đi đâu cũng được, miễn là cùng anh.</p>
+                        <samp><i class="fa-regular fa-heart"></i></samp>
+                    </div>
+                    <div class="hoa-befor-2">
+                        <div class="befo-2">
+                        </div>
+                    </div>
+                    <div class="love-1 text-center mt-3">
+                        <h3>Ngày lễ đính hôn</h3>
+                        <h4>July 28 2018</h4>
+                        <div class="love-img-1">
+                            <img src="./image/666.jpeg" alt="">
+                        </div>
+                        <p class="mt-3">“Tiếng trái tim đôi ta đập thật nhanh. Thì thầm lời yêu thương. Ngày tình về
+                            chung đôi...” Sau bao nhiêu chờ đợi, cuối cùng ngày vui của chúng ta cũng tới rồi. Cảm
+                            ơn vì
+                            mình đã luôn là một phần trong cuộc sống của nhau. Em và anh không chỉ là người yêu mà
+                            chúng
+                            ta còn là tri kỷ. Ngày hôm nay, em sẽ là cô dâu của anh và sau này sẽ là mẹ của các con
+                            anh.
+                        </p>
+
+                    </div>
+                    <div class="text-center">
+                        <img src="./image/777.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-style-1">
+        <div class="inner">
+            <div class="couple-pic">
+                <img src="./image/avataft.jpeg" alt="">
+                <h2>Thank you!</h2>
+            </div>
+        </div>
+    </footer>
+
     <!-- script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
