--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
 </head>
 
 <body>
+    <div class="heartflakes" aria-hidden="true">
+        <div class="heartflake">
+            <img src="./image/heartfalling.png">
+        </div>
+        <div class="heartflake">
+            <img src="./image/heartfalling.png">
+        </div>
+        <div class="heartflake">
+            <img src="./image/heartfalling2.png">
+        </div>
+        <div class="heartflake">
+            <img src="./image/heartfalling4.png">
+        </div>
+        <div class="heartflake">
+            <img src="./image/heartfalling.png">
+        </div>
+        <div class="heartflake">
+            <img src="./image/heartfalling2.png">
+        </div>
+    </div>
+
     <!-- header -->
     <section class="top-bar">
         <div class="container">
@@ -370,6 +391,97 @@
     </section>
     <!-- end love -->
 
+
+
+    <!-- even wedding -->
+    <section class="even__wedding">
+        <div class="even__wedding--content">
+            <div class="even__wedding--feature">
+                <h1 class="even__wedding--title">Sự Kiện Cưới</h1>
+                <p class="even__wedding--text">...tình yêu không phải là nhìn chằm chằm vào nhau, mà là nhìn chằm chằm
+                    về cùng một hướng...</p>
+            </div>
+        </div>
+        <div class="contaiter">
+            <div class="row">
+                <div class="even__wedding--card_group">
+                    <div class="col-12 col-md-2 mb-5 even__wedding--card">
+                        <h3>LỄ CƯỚI NHÀ NỮ</h3>
+                        <div class="image-wrap">
+                            <img src="./image/even-image1.jpeg" alt="">
+                        </div>
+                        <p class="card--date"><strong>07:30 AM 10/02/2023</strong></p>
+                        <p class="card--text">Tư gia nhà nữ</p>
+                        <div class="calendar-button">
+                            <div class="atcb-initialized">
+                                <button id="calendar-button-1" class="calendar-button-btn"><i
+                                        class="fa fa-regular fa-calendar-check i-icon"></i>
+                                    Thêm vào lịch</button>
+                            </div>
+                        </div>
+                        <a href="https://www.google.com/maps/place/H%C3%A0+N%E1%BB%99i,+Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0085006,105.831,13.75z/data=!4m15!1m8!3m7!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!2zSMOgIE7hu5lpLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!3b1!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY!3m5!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY?hl=vi"
+                            class="see-location-btn" target="_blank">Xem bản đồ</a>
+                    </div>
+                    <div class="col-12 col-md-2 mb-5 even__wedding--card">
+                        <h3>TIỆC CƯỚI NHÀ NỮ</h3>
+                        <div class="image-wrap">
+                            <img src="./image/even-image2.jpeg" alt="">
+                        </div>
+                        <p class="card--date"><strong>11:30 AM 10/02/2023</strong></p>
+                        <p class="card--text">Nhà hàng tiệc cưới Hoa Cau</p>
+                        <div class="calendar-button">
+                            <div class="atcb-initialized">
+                                <button id="calendar-button-2" class="calendar-button-btn"><i
+                                        class="fa fa-regular fa-calendar-check i-icon"></i>
+                                    Thêm vào lịch</button>
+                            </div>
+                        </div>
+                        <a href="https://www.google.com/maps/place/H%C3%A0+N%E1%BB%99i,+Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0085006,105.831,13.75z/data=!4m15!1m8!3m7!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!2zSMOgIE7hu5lpLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!3b1!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY!3m5!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY?hl=vi"
+                            class="see-location-btn" target="_blank">Xem bản đồ</a>
+                    </div>
+                    <div class="col-12 col-md-2 mb-5 even__wedding--card">
+                        <h3>LỄ CƯỚI NHÀ NAM</h3>
+                        <div class="image-wrap">
+                            <img src="./image/even-image3.jpeg" alt="">
+                        </div>
+                        <p class="card--date"><strong>09:00 AM 12/09/2023</strong></p>
+                        <p class="card--text">Tư gia nhà nam</p>
+                        <div class="calendar-button">
+                            <div class="atcb-initialized">
+                                <button id="calendar-button-3" class="calendar-button-btn"><i
+                                        class="fa fa-regular fa-calendar-check i-icon"></i>
+                                    Thêm vào lịch</button>
+                            </div>
+                        </div>
+                        <a href="https://www.google.com/maps/place/H%C3%A0+N%E1%BB%99i,+Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0085006,105.831,13.75z/data=!4m15!1m8!3m7!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!2zSMOgIE7hu5lpLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!3b1!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY!3m5!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY?hl=vi"
+                            class="see-location-btn" target="_blank">Xem bản đồ</a>
+                    </div>
+                    <div class="col-12 col-md-2 mb-5 even__wedding--card">
+                        <h3>TIỆC CƯỚI NHÀ NAM</h3>
+                        <div class="image-wrap">
+                            <img src="./image/even-image4.jpeg" alt="">
+                        </div>
+                        <p class="card--date"><strong>12:00 AM 12/09/2023</strong></p>
+                        <p class="card--text">Nhà hàng tiệc cưới For You</p>
+                        <div class="calendar-button">
+                            <div class="atcb-initialized">
+                                <button id="calendar-button-4" class="calendar-button-btn"><i
+                                        class="fa fa-regular fa-calendar-check i-icon"></i>
+                                    Thêm vào lịch</button>
+                            </div>
+                        </div>
+
+                        <a href="https://www.google.com/maps/place/H%C3%A0+N%E1%BB%99i,+Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0085006,105.831,13.75z/data=!4m15!1m8!3m7!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!2zSMOgIE7hu5lpLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!3b1!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY!3m5!1s0x3135ab9bd9861ca1:0xe7887f7b72ca17a9!8m2!3d21.0277644!4d105.8341598!16zL20vMGZuZmY?hl=vi"
+                            class="see-location-btn" target="_blank">Xem bản đồ</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end even wedding -->
+
+
+
     <!-- album img -->
     <section>
         <div class="container">
@@ -540,6 +652,16 @@
         </div>
     </section>
 
+    
+    <footer class="footer-style-1">
+        <div class="inner-footer">
+            <div class="couple-pic">
+                <img src="./image/avataft.jpeg" alt="">
+                <h2>Thank you!</h2>
+            </div>
+        </div>
+    </footer>
+    
     <!-- button audio -->
     <div class="btn__play-audio">
         <i id="play-pause-btn" onclick="playMusic()" class="fa fa-solid fa-volume-xmark i-icon"></i>
@@ -548,10 +670,68 @@
 
 
 
-
+    <script>
+        config1 = {
+            name: "Lễ cưới nhà nữ",
+            description: "Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!",
+            location: "Tư gia nhà nữ",
+            startDate: "2023-03-12",
+            startTime: "10:15",
+            endTime: "23:30",
+            options: ["Google|Lịch", "iCal", "Apple", "Yahoo"],
+            timeZone: "America/Los_Angeles"
+        };
+        config2 = {
+            name: "Tiệc cưới nhà nữ",
+            description: "Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!",
+            location: "Nhà hàng tiệc cưới Hoa Cau",
+            startDate: "2023-03-12",
+            startTime: "10:15",
+            endTime: "23:30",
+            options: ["Google|Lịch", "iCal", "Apple", "Yahoo"],
+            timeZone: "America/Los_Angeles"
+        };
+        config3 = {
+            name: "Lễ cưới nhà nam",
+            description: "Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!",
+            location: "Tư gia nhà nam",
+            startDate: "2023-03-12",
+            startTime: "10:15",
+            endTime: "23:30",
+            options: ["Google|Lịch", "iCal", "Apple", "Yahoo"],
+            timeZone: "America/Los_Angeles"
+        };
+        config4 = {
+            name: "Tiệc cưới nhà nam",
+            description: "Cảm ơn bạn đã dành thời gian tham dự đám cưới của chúng tôi!",
+            location: "Nhà hàng tiệc cưới For You",
+            startDate: "2023-03-12",
+            startTime: "10:15",
+            endTime: "23:30",
+            options: ["Google|Lịch", "iCal", "Apple", "Yahoo"],
+            timeZone: "America/Los_Angeles"
+        };
+        const button1 = document.getElementById('calendar-button-1');
+        const button2 = document.getElementById('calendar-button-2');
+        const button3 = document.getElementById('calendar-button-3');
+        const button4 = document.getElementById('calendar-button-4');
+        if (button1) {
+            button1.addEventListener('click', () => atcb_action(config1, button1));
+        }
+        if (button2) {
+            button2.addEventListener('click', () => atcb_action(config2, button2));
+        }
+        if (button3) {
+            button3.addEventListener('click', () => atcb_action(config3, button3));
+        }
+        if (button4) {
+            button4.addEventListener('click', () => atcb_action(config4, button4));
+        }
+    </script>
     <!-- script main js -->
     <script src="./js/main.js"></script>
     <!-- script bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
